<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFededfa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_separator_lyt"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

    <LinearLayout
        android:id="@id/main_separator_lyt"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/car_footer_lyt"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="#66000000"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@id/car_footer_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/car_footer_info_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view_shape_cyan"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listing_api_total_cars"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cars_total_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#66000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listing_api_hit"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cars_api_hits_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_footer_sort_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_footer_info_lyt"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_view_shape_grey"
                android:padding="8dp"
                android:text="@string/listing_sort_by"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/car_footer_sort_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rounded_view_shape_grey"
                android:padding="8dp"
                android:text="@string/listing_sort_price"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/car_footer_sort_rating_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_view_shape_grey"
                android:padding="8dp"
                android:text="@string/listing_sort_rating"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>